[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "checkrs"
author = "Timothy Brathwaite"
author-email = "timothyb0912@gmail.com"
home-page = "https://github.com/timothyb0912/checkrs"
requires = [
    "future",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "tqdm",
]
requires-python=">=3.3"
description-file = "README.md"
keywords= "diagnostics,visualization,data-science,matplotlib"
classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
]
