[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "checkrs"
author = "Timothy Brathwaite"
author-email = "timothyb0912@gmail.com"
home-page = "https://github.com/timothyb0912/checkrs"
requires = [
    "altair",
    "altair-viewer",
    "attrs",
    "future",
    "matplotlib",
    "numpy",
    "pandas",
    "plotnine",
    "scipy",
    "seaborn",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "torch",
    "typing_extensions",
    "tqdm",
]
requires-python=">=3.3"
description-file = "README.md"
keywords= "diagnostics,visualization,data-science,matplotlib"
classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py35, py36, py37, py38

[testenv]
deps = pytest >= 3.3.0
commands = pytest
"""
